[gd_scene load_steps=16 format=2]

[ext_resource path="res://Gabe/TinyDrum/gfx/slider_track.png" type="Texture" id=1]
[ext_resource path="res://Gabe/TinyDrum/gfx/fader.png" type="Texture" id=2]
[ext_resource path="res://Gabe/TinyDrum/gfx/icons.png" type="Texture" id=3]
[ext_resource path="res://Gabe/TinyDrum/VoiceParameterPanel.gd" type="Script" id=4]
[ext_resource path="res://Gabe/TinyDrum/gfx/volume_icon.png" type="Texture" id=5]
[ext_resource path="res://Gabe/TinyDrum/gfx/pitch_icon.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 4
border_color = Color( 0.580392, 0.878431, 0.537255, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="VoiceParams" type="Panel"]
margin_top = -8.0
margin_right = 37.0
margin_bottom = 81.0
rect_min_size = Vector2( 37, 75 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -53.0
margin_right = 10.0
margin_bottom = -5.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 5.0
margin_bottom = 48.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="VSlider" parent="HBoxContainer/TextureRect"]
margin_left = -2.0
margin_right = 7.0
margin_bottom = 47.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = -20.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
margin_left = 15.0
margin_right = 20.0
margin_bottom = 48.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PitchSlider" type="VSlider" parent="HBoxContainer/TextureRect2"]
margin_left = -2.0
margin_right = 7.0
margin_bottom = 47.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
min_value = 0.1
max_value = 10.0
step = 0.1
value = 0.1
exp_edit = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 18.8546, 9.0147 )
frames = SubResource( 9 )

[node name="VolumeIcon" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 18.0
margin_right = 16.0
margin_bottom = 26.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PitchIcon" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 18.0
margin_right = 32.0
margin_bottom = 26.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
